--- a/app/views/exercise/start.html
+++ b/app/views/exercise/start.html
@@ -1,12 +1,8 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  GOV.UK page template – {{ serviceName }} – GOV.UK Prototype Kit
+Applying for a juggling license
 {% endblock %}
-
-
-
-
 
 
 
