--- a/app/views/dexterity/start.html
+++ b/app/views/dexterity/start.html
@@ -15,54 +15,26 @@
 {% block content %}
 
 
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
+<div class="govuk-width-container">
+  <main class="govuk-main-wrapper">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+
+<h1 class="govuk-heading-l">Dexterity</h1>
+
+   <p class="govuk-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut posuere, nisi sed laoreet laoreet, quam leo tristique magna, vitae elementum  velit mauris sed lorem. Nulla dignissim cursus nibh, at pharetra.</p>
+  
+<a href="/dexterity/dexterity" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+  Start now
+  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+  </svg>
+</a>
 
 
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-      <h1 class="govuk-fieldset__heading">
-       Which hand do you write with?
-      </h1>
-    </legend>
-
-
-    <div class="govuk-radios" data-module="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
-          England
-        </label>
       </div>
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
-          Scotland
-        </label>
-      </div>
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
-          Wales
-        </label>
-      </div>
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="northern-ireland">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
-          Northern Ireland
-        </label>
-      </div>
-
-
     </div>
-
-
-  </fieldset>
+  </main>
 </div>
 
 {% endblock %}
