--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,17 +10,16 @@
 
 
     <h1 class="govuk-heading-xl">
-      {{ serviceName }}
+     Dexterity
     </h1>
 
-   <p class="govuk-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut posuere, nisi sed laoreet laoreet, quam leo tristique magna, vitae elementum  velit mauris sed lorem. Nulla dignissim cursus nibh, at pharetra.</p>
-  
-<a href="/dexterity/start" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-  Start now
-  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-  </svg>
-</a>
+    <p class="govuk-body">View and continue the exercise.</p>
+
+{{ govukButton({
+  text: "Continue",
+  href: "/dexterity/start"
+
+}) }}
 
 
 
