--- a/app/views/exercise/email.html
+++ b/app/views/exercise/email.html
@@ -10,7 +10,7 @@
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
-  href: "start"
+  href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
 
@@ -45,17 +45,17 @@ value: data.exercise.email
 
 {# HTML test, something isn't right about the value #}
 
-{# 
-<div class="govuk-form-group">
+
+{# <div class="govuk-form-group">
   <h1 class="govuk-label-wrapper">
     <label class="govuk-label govuk-label--l" for="[exercise][email]">
       {{pageName}}
     </label>
   </h1>
   <input class="govuk-input govuk-input--width-20" id="[exercise][email]" name="[exercise][email]" type="email" autocomplete='true' value= {{data['email']}}>
-</div>
+</div> #}
 
- #}
+
 
 
 
