--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,23 +7,22 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+<h1 class="govuk-heading-l">Dexterity</h1>
+
+<p class="govuk-body">View and continue the exercise.</p>
 
 
-    <h1 class="govuk-heading-xl">
-     Dexterity
-    </h1>
-
-    <p class="govuk-body">View and continue the exercise.</p>
-
-{{ govukButton({
-  text: "Continue",
-  href: "/dexterity/start"
-
-}) }}
+<a href="/dexterity/start" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+  Continue
+</a>
 
 
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+
+
+
+<!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <h2 class="govuk-heading-m">Advanced prototype</h2>
 
@@ -31,7 +30,7 @@
 <p class="govuk-body">Playing with <a href="/nunjucks/testing" class="govuk-link">nunjucks</a>.</p>
 
 
-<p class="govuk-body">Apply for a juggling license <a href="/exercise/start" class="govuk-link"> advanced exercise</a>.</p>
+<p class="govuk-body">Apply for a juggling license <a href="/exercise/start" class="govuk-link"> advanced exercise</a>.</p> -->
 
 
     <!-- {% include "govuk-prototype-kit/includes/homepage-top.njk" %} -->
