--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,13 +13,23 @@
 
 
 <a href="/dexterity/start" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+
   Continue
+
 </a>
 
 
 
+test 
 
 
+joeiufdhrwIG;HE'TIGHJ'<lightning-record-edit-form
+  density="compact"
+  object-api-name={objectApiName}
+  record-id={recordId}
+>
+  
+</lightning-record-edit-form>
 
 
 <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
