--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,19 +20,9 @@
 
 
 
-test 
 
 
-joeiufdhrwIG;HE'TIGHJ'<lightning-record-edit-form
-  density="compact"
-  object-api-name={objectApiName}
-  record-id={recordId}
->
-  
-</lightning-record-edit-form>
-
-
-<!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <h2 class="govuk-heading-m">Advanced prototype</h2>
 
@@ -40,7 +30,7 @@ joeiufdhrwIG;HE'TIGHJ'<lightning-record-edit-form
 <p class="govuk-body">Playing with <a href="/nunjucks/testing" class="govuk-link">nunjucks</a>.</p>
 
 
-<p class="govuk-body">Apply for a juggling license <a href="/exercise/start" class="govuk-link"> advanced exercise</a>.</p> -->
+<p class="govuk-body">Apply for a juggling license <a href="/exercise/start" class="govuk-link"> advanced exercise</a>.</p>
 
 
     <!-- {% include "govuk-prototype-kit/includes/homepage-top.njk" %} -->
