--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,8 @@
 
 <h2 class="govuk-heading-m">Advanced prototype</h2>
 
+<h2 class="govuk-heading-m">Poopy</h2>
+
 
 <p class="govuk-body">Playing with <a href="/nunjucks/testing" class="govuk-link">nunjucks</a>.</p>
 
