--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,30 +9,29 @@
 
 <h1 class="govuk-heading-l">Dexterity</h1>
 
-<p class="govuk-body">View and continue the exercise.</p>
-
-
-<a href="/dexterity/start" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-
-  Continue
-
+   <p class="govuk-body">Check your eligibility for support.</p>
+  
+<a href="/dexterity/dexterity" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+  Start now
+  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+  </svg>
 </a>
-
 
 
 
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-<h2 class="govuk-heading-m">Advanced prototype</h2>
-
-<h2 class="govuk-heading-m">Poopy number 2</h2>
+<h2 class="govuk-heading-m">Advanced prototyping</h2>
 
 
-<p class="govuk-body">Playing with <a href="/nunjucks/testing" class="govuk-link">nunjucks</a>.</p>
+<p class="govuk-body">Playing with <a href="/play/testing" class="govuk-link">nunjucks</a>.</p>
 
 
-<p class="govuk-body">Apply for a juggling license <a href="/exercise/start" class="govuk-link"> advanced exercise</a>.</p>
+<p class="govuk-body">Apply for a juggling license <a href="/nunjucks/start" class="govuk-link"> advanced exercise in nunjucks</a>.</p>
+
+<p class="govuk-body">Apply for a juggling license <a href="/html/start" class="govuk-link"> advanced exercise in html</a>.</p>
 
 
     <!-- {% include "govuk-prototype-kit/includes/homepage-top.njk" %} -->
