code page update
ongoing

--- a/app/views/nunjucks/code.html
+++ b/app/views/nunjucks/code.html
@@ -48,8 +48,8 @@
 
 
 {{ govukDetails({
-  summaryText: "Didn't received a code?",
-  text: "Check the spam and deleted emails folder. If you still can't find it, you can request a new code."
+  summaryText: "Didn't receive a code?",
+  html: "Check the spam and deleted emails folder. If you still can't find it, you can <a class='govuk-link' href='email'>request a new code</a>."
 }) }}
 
 
